[gd_scene load_steps=12 format=3 uid="uid://l4ulw4k528e1"]

[ext_resource type="Texture2D" uid="uid://cu0aq1tnbdah0" path="res://Sprites/Character/Idlebackchar.png" id="1_3idp4"]
[ext_resource type="Script" path="res://Sprites/Character/backcharacter.gd" id="1_b750p"]
[ext_resource type="Script" path="res://Sprites/Character/PlayerAnimation.gd" id="2_41cne"]
[ext_resource type="Texture2D" uid="uid://b1vgmlecpdc75" path="res://Sprites/Character/hitbackchar.png" id="2_yi6mh"]
[ext_resource type="Texture2D" uid="uid://b4okb1voxriu3" path="res://Sprites/Character/attackbackchar.png" id="3_lkvxi"]
[ext_resource type="Texture2D" uid="uid://bj3txjsiwxf7m" path="res://Sprites/Character/deathbackchar.png" id="4_sswwg"]

[sub_resource type="Animation" id="Animation_cud4y"]
resource_name = "Attack"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AttackBack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2, 3.6, 4, 4.4, 4.8, 5.2, 5.6, 6, 6.4, 6.8, 7.2, 7.6, 8, 8.4, 8.8, 9.2, 9.6, 10, 10.4, 10.8, 11.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_eonyi"]
resource_name = "Death"
length = 14.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DeathBack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0.4, 0.9, 1.4, 1.9, 2.4, 2.9, 3.4, 3.9, 4.4, 4.9, 5.4, 5.9, 6.4, 6.9, 7.4, 7.9, 8.4, 8.9, 9.4, 9.9, 10.4, 10.9, 11.4, 11.9, 12.4, 12.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_05mkm"]
resource_name = "Hit"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HitBack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0.3, 0.7, 1.1, 1.5, 1.9, 2.3, 2.7, 3.1, 3.5, 3.9, 4.3, 4.7, 5.1, 5.5, 5.9, 6.3, 6.7, 7.1, 7.5, 7.9, 8.3, 8.7, 9.1, 9.5, 9.9, 10.3, 10.7, 11.1, 11.5, 11.9, 12.3, 12.7, 13.1, 13.5, 13.9, 14.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36]
}

[sub_resource type="Animation" id="Animation_ao23r"]
resource_name = "Character Animations"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6, 4.8, 5, 5.2, 5.4, 5.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cn7py"]
_data = {
"Attack": SubResource("Animation_cud4y"),
"Death": SubResource("Animation_eonyi"),
"Hit": SubResource("Animation_05mkm"),
"Idle": SubResource("Animation_ao23r")
}

[node name="Characterback" type="Node2D"]
script = ExtResource("1_b750p")

[node name="IdleBack" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(114, 204)
texture = ExtResource("1_3idp4")
hframes = 5
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../IdleBack")
libraries = {
"": SubResource("AnimationLibrary_cn7py")
}
autoplay = "Idle"
script = ExtResource("2_41cne")

[node name="HitBack" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(114, 204)
texture = ExtResource("2_yi6mh")
hframes = 5
vframes = 8

[node name="AttackBack" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(114, 204)
texture = ExtResource("3_lkvxi")
hframes = 5
vframes = 6

[node name="DeathBack" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(68, 204)
texture = ExtResource("4_sswwg")
hframes = 5
vframes = 6

[node name="cooldown" type="Timer" parent="."]

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
